done: add user (WITHOUT validations), delete user, deactivate/activate user, internationalization TODO: edit, exception handling etc

--- a/jbugs-client/src/main/webapp/login.xhtml
+++ b/jbugs-client/src/main/webapp/login.xhtml
@@ -7,13 +7,13 @@
 <h:body>
 	<h:form id="loginForm">
 		<h:panelGrid columns="3">
-			<h:outputLabel for="username" value="Username: " />
+			<h:outputLabel for="username" value="#{msg['login.username']}" />
 			<h:inputText id="username" value="#{loginBean.user.username}">
 				<f:validateLength minimum="3"></f:validateLength>
 			</h:inputText>
 			<h:message for="username" />
 
-			<h:outputLabel for="password" value="Password: " />
+			<h:outputLabel for="password" value="#{msg['login.password']}" />
 			<h:inputSecret id="password" value="#{loginBean.user.password}" />
 			<h:message for="password" />
 
