--- a/jbugs-client/src/main/webapp/users.xhtml
+++ b/jbugs-client/src/main/webapp/users.xhtml
@@ -21,7 +21,7 @@
 			<h:column>
 				<f:facet name="header">First Name</f:facet>
 				<h:outputText value="#{user.firstName}"
-					rendered="#{!user.id.equals(userManagementBean.editedUserId)}" />
+					rendered="#{!(user.id.equals(userManagementBean.editedUserId))}" />
 				<h:inputText value="#{user.firstName}"
 					rendered="#{user.id.equals(userManagementBean.editedUserId)}" />
 			</h:column>
@@ -29,7 +29,7 @@
 			<h:column>
 				<f:facet name="header">Last name</f:facet>
 				<h:outputText value="#{user.lastName}"
-					rendered="#{!user.id.equals(userManagementBean.editedUserId)}" />
+					rendered="#{!(user.id.equals(userManagementBean.editedUserId))}" />
 				<h:inputText value="#{user.lastName}"
 					rendered="#{user.id.equals(userManagementBean.editedUserId)}" />
 			</h:column>
@@ -61,7 +61,7 @@
 				<f:facet name="header">Edit</f:facet>
 				<h:commandLink
 					action="#{userManagementBean.enableEditMode(user.id)}" value="edit"
-					rendered="#{!user.id.equals(userManagementBean.editedUserId)}">
+					rendered="#{!(user.id.equals(userManagementBean.editedUserId))}">
 				</h:commandLink>
 				<h:commandLink action="#{userManagementBean.disableEditMode()}"
 					value="cancel"
