--- a/jbugs-client/src/main/webapp/login.xhtml
+++ b/jbugs-client/src/main/webapp/login.xhtml
@@ -6,6 +6,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 <h:body>
+	<h:messages></h:messages>
 	<h:form id="loginForm">
 		<h:panelGrid columns="3">
 			<h:outputLabel for="username" value="#{msg['login.username']}" />
@@ -17,6 +18,11 @@
 			<h:outputLabel for="password" value="#{msg['login.password']}" />
 			<h:inputSecret id="password" value="#{loginBean.user.password}" />
 			<h:message for="password" />
+			
+			<h:selectOneRadio value = "#{loginBean.lang}"> 
+			   <f:selectItem itemValue = "en" itemLabel = "en" /> 
+			   <f:selectItem itemValue = "ro" itemLabel = "ro" />
+			</h:selectOneRadio> 
 			
 			<h:commandButton action="#{loginBean.doLogin}" value="Login"></h:commandButton>
 		</h:panelGrid>
