block (deactivate) a user after 5 fails

--- a/jbugs-client/src/main/webapp/users.xhtml
+++ b/jbugs-client/src/main/webapp/users.xhtml
@@ -44,7 +44,7 @@
             <h:column>
                 <f:facet name="header">First Name</f:facet>
                 <h:outputText value="#{user.firstName}"
-                              rendered="#{!user.equals(userManagementBean.editedUser)}"/>
+                              rendered="#{!(user.equals(userManagementBean.editedUser))}"/>
                 <h:inputText value="#{userManagementBean.editedUser.firstName}"
                              rendered="#{user.equals(userManagementBean.editedUser)}"
                             />
@@ -54,7 +54,7 @@
             <h:column>
                 <f:facet name="header">Last name</f:facet>
                 <h:outputText value="#{user.lastName}"
-                              rendered="#{!user.equals(userManagementBean.editedUser)}"/>
+                              rendered="#{!(user.equals(userManagementBean.editedUser))}"/>
                 <h:inputText value="#{userManagementBean.editedUser.lastName}"
                              rendered="#{user.equals(userManagementBean.editedUser)}"
                            />
@@ -63,7 +63,7 @@
 			<h:column>
 				<f:facet name="header">Phone Number</f:facet>
 				<h:outputText value="#{user.phoneNumber}"
-                              rendered="#{!user.equals(userManagementBean.editedUser)}"/>
+                              rendered="#{!(user.equals(userManagementBean.editedUser))}"/>
                 <h:inputText value="#{userManagementBean.editedUser.phoneNumber}"
                              rendered="#{user.equals(userManagementBean.editedUser)}"
                             />
@@ -72,7 +72,7 @@
 			<h:column>
 				<f:facet name="header">Email</f:facet>
 				<h:outputText value="#{user.email}"
-                              rendered="#{!user.equals(userManagementBean.editedUser)}"/>
+                              rendered="#{!(user.equals(userManagementBean.editedUser))}"/>
                 <h:inputText value="#{userManagementBean.editedUser.email}"
                              rendered="#{user.equals(userManagementBean.editedUser)}"
                            />
@@ -110,7 +110,7 @@
 				<f:facet name="header">Edit</f:facet>
 				<h:commandButton value="Edit"
 								action="#{userManagementBean.setEditedUser(user)}"
-								rendered="#{not user.equals(userManagementBean.editedUser)}" />
+								rendered="#{not (user.equals(userManagementBean.editedUser))}" />
 				<h:commandButton value="Save" 
 								 action="#{userManagementBean.doSaveEditedUser}"
 								 rendered="#{user.equals(userManagementBean.editedUser)}" />
